--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 Hello,
 
 This is a simple caluclator app made using tkinter. This is my first official project. 
-There are a minimal amounts of features in here. 
+There are a minimal amounts of features in here, but i tried my best!
 
 Thank you. 
